--- a/stonks/package.json
+++ b/stonks/package.json
@@ -18,6 +18,7 @@
     "hono": "^4.6.3",
     "ts-node": "^10.4.0",
     "typescript": "^5.5.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8", 
+    "@dainprotocol/client": "^1.0.41"
   }
 }
