--- a/stonks/package.json
+++ b/stonks/package.json
@@ -10,7 +10,8 @@
     "deploy": "dain deploy"
   },
   "dependencies": {
-    "@dainprotocol/service-sdk": "^1.0.41",
+    "@dainprotocol/cli": "^1.0.31",
+    "@dainprotocol/service-sdk": "^1.0.56",
     "@polygon.io/client-js": "^7.3.2",
     "@types/express": "^4.17.13",
     "@types/node": "^22.5.4",
@@ -18,7 +19,6 @@
     "hono": "^4.6.3",
     "ts-node": "^10.4.0",
     "typescript": "^5.5.4",
-    "zod": "^3.23.8", 
-    "@dainprotocol/cli": "^1.0.31"
+    "zod": "^3.23.8"
   }
 }
